public/css/obsidian.css
/* ... */
      .tabs button:disabled, #tabs button:disabled {
        color: var(--dim) !important;
        text-shadow: none !important;
        opacity: 0.5 !important;
      }

  /* SECONDARY TABS */

  .tabs.secondary button {
    text-shadow: 1px 1px 4px #0003;
  }
  .tabs.secondary:after {
    content: '';
    width: 100%;
    height: 10px;
    background-color: var(--block);
    position: absolute;
    bottom: -10px;
    left: 0px;
    box-shadow: 2px 2px 2px #0001;
  }
    .tabs.secondary button:not(.active) {
      color: var(--linkVisited);
      opacity: 1;
    }
      .tabs.secondary button:not(.active):hover {
        color: var(--text);
      }
  .tabs.secondary button.active {
    background-color: var(--block);
    box-shadow: 2px 0px 2px #0003;
  }
    .tabs.secondary button.active:after {
      box-shadow: -8px 0 0 0 var(--block);
    }
    .tabs.secondary button.active:before {
      box-shadow: 8px 0 0 0 var(--block);
    }
    .tabs.secondary button:first-child::before {
      content: none;
    }

  /* TERTIARY TABS */

  .tabs.tertiary button {
    color: var(--link);
  }
    .tabs.tertiary button:first-child {
      padding-left: 0px;
    }

/* MISC */

.clear {
  clear: both;
}
.sep {
  width: 1px;
  height: 22px;
  border-left: 1px solid #0003;
  border-right: 1px solid #fff1;
  display: inline-block;
}

.diceRoll {
  line-height: 200%;
}
  .diceRoll h3 {
    margin: 0px;
  }
  .diceRoll .row {
    font-family: courier, courier new, sans-serif;
  }
  .diceRoll .type {
    display: inline-block;
    width: 80px;
  }
  .diceRoll b {
    font-size: 30px;
  }

.info {
  font-size: 20px;
  color: var(--dim);
  font-style: italic;
  padding-left: 10px;
}

.badge {
  position: absolute;
  top: -5px;
  right: -5px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  box-shadow: 2px 2px 4px #0006;
  background-color: var(--new);
  z-index: 100;
}

.status {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  box-shadow: 2px 2px 4px #0006;
  background-color: var(--accent);
}

/* Post content */

.post .content {
  font-size: 20px;
  font-weight: 375;
}
.post .content p {
  margin: 0px;
  min-height: 30px;
  line-height: 150%;
}
.post .content img, .post .content iframe {
  max-width: 100%;
  object-fit: contain;
  height: auto;
  cursor: pointer;
}
.post .content a {
  text-decoration: underline;
}
  .post .content a:visited {
    color: var(--linkVisited);
  }
  .post .content a.button {
    text-decoration: none;
    margin: 5px 0px;
  }
  .post .content a.button:visited {
    color: var(--text);
  }
.post .content .user {
  color: var(--user) !important;
}
  .post .content a.user:hover {
    color: var(--userHover) !important;
  }
.post .content .reply { /* reply */
  padding: 5px;
  padding-left: 0px;
  color: var(--user);
  font-style: normal;
  font-variation-settings: 'wght' 600;
  cursor: pointer;
}
  .post .content .nestedReply {
    box-shadow: 0px 0px 6px #0006;
    margin-bottom: 20px;
  }
  .post .content .reply:hover {
    color: var(--userHover);
  }

#lastPosts .content {
  max-height: 300px;
  overflow: auto;
}

/* WYSIWYG Editor - TipTap/ProseMirror */

.ProseMirror {
  font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
  font-size: 20px;
  border: none;
  color: var(--text);
  height: 100%;
  min-height: 140px;
  width: auto;
  margin: 0px;
  padding: 15px;
  padding-bottom: 50px;
  padding-right: 80px;
  overflow-wrap: break-word;
  word-break: break-word;
}
.ProseMirror img {
  max-width: 100%;
}
.ProseMirror p {
  margin: 10px 0px;
}
  .ProseMirror ol p, .ProseMirror ul p {
    margin: 0px;
  }
.ProseMirror .details {
  display: flex;
  align-items: center;
  margin: 1rem 0;
  border: 1px solid var(--buttonBg);
  border-radius: 10px;
  padding: 5px;
  gap: 10px;
}
  .ProseMirror .details>button {
    display: flex;
    cursor: pointer;
    padding: 0px;
  }
  .ProseMirror .details>button:before {
    content: "\25b6";
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1.5em;
    height: 1.5em;
  }
  .ProseMirror .details.is-open>button:before {
    content: "\25bc";
  }
  .ProseMirror .is-empty:before {
    content: attr(data-placeholder);
    float: left;
    color: var(--dim);
    pointer-events: none;
    height: 0;
  }
  .ProseMirror .details>div {
    flex: 1 1 auto;
  }
  .ProseMirror cite { /* reply */
    padding: 5px;
    padding-left: 0px;
    color: var(--accent);
    font-style: normal;
    font-variation-settings: 'wght' 600;
  }
  img.ProseMirror-selectednode {
    outline: 2px var(--maximum) solid;
    border-radius: 5px;
  }

  .sansserif { font-family: 'Alegreya Sans' }
  .monospace { font-family: monospace }
  .cursive { font-family: cursive }
  .caveat { font-family: 'Caveat' }
  .orbitron { font-family: 'Orbitron' }

/* Svelte Easy Crop */

.cropperArea {
  border: 2px white solid !important;
  color: var(--panel) !important;
  opacity: 0.5;
}

/* Tippy tooltip */

.tippy-box {
  background-color: var(--background) !important;
  color: var(--text) !important;
  font-size: 18px !important;
  box-shadow: 1px 1px 6px #0002;
  padding: 0px;
}
.tippy-arrow {
  color: var(--background) !important;
}

.tippy-box-bubble {
  background-color: transparent !important;
  box-shadow: none !important;
}
  .tippy-box-bubble .tippy-arrow {
    display: none;
  }

/* MISC */

.grecaptcha-badge { 
    visibility: hidden !important;
}

/* Component overrides */

/*
#newsCategorySelect button {
  background: none;
  padding: 10px 30px 10px 0px;
  position: relative;
  border: none;
  box-shadow: none;
  font-family: inherit;
  font-size: inherit;
  white-space: nowrap;
}
  #newsCategorySelect button.dropdown-toggle::after {
    content: '⧨';
    position: absolute;
    right: 0px;
  }
*/

.headline.pinned {
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
  clip-path: polygon(0 0, 100% 0, 100% 200%, 0 200%);
}
/* ... */

